# AI-Recall-Map

./: .gitignore  .no-mistakes.yaml  CLAUDE.md  CONTEXT-MAP.md  DECISIONS.md  Grill_Questions_v1.md  Plan_v1.md  Plan_v2_Option_C_AI_First_RAG.md  README.md  lab-notebook.md
.claude/: settings.json
.tools/: package-lock.json
Deprecated/: Plan_v2_Option_A_Simple_MVP.md  Plan_v2_Option_B_Product_MVP.md
backend/: CONTEXT.md  pyproject.toml
backend/app/: all_concepts.py  auth.py  concept_map.py  concepts.py  config.py  confirmation.py  db.py  deps.py  extraction.py  goals.py  home.py  llm.py  main.py  materials.py  reviews.py  scheduler.py  topics.py
backend/app/prompts/: __init__.py  extraction_v1.py  grading_v1.py  proposal_v1.py  relevance_v1.py  router_v1.py
backend/docs/adr/: 0001-no-rag-for-v1-grading.md  0002-plain-postgres-rows-not-graph-database.md  0003-prompts-in-code-not-database.md  0004-no-background-job-queue-in-v1.md  0005-dashboard-input-concept-level-routing.md  0006-goal-per-topic-two-phase-relevance.md  0007-concept-map-as-hierarchy-tree.md  0008-ai-enriched-concept-format.md
backend/scripts/: apply_migration.py
backend/tests/: conftest.py  test_all_concepts.py  test_concept_detail.py  test_concept_map.py  test_confirmation.py  test_e2e_core_loop.py  test_enriched_concept.py  test_extraction.py  test_extraction_granularity.py  test_goal.py  test_health.py  test_home_summary.py  test_materials.py  test_override.py  test_pings.py  test_proposals.py  test_reviews.py  test_routing.py  test_scheduler.py  test_topics.py
frontend/: CONTEXT.md  (+5 more)
(+47 files in other folders)
