[project]
name = "ai-recall-map-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "openai>=2.46.0",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
# Share one event loop across the suite so the module-level async engine
# (whose asyncpg connections bind to their creating loop) stays valid.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
